@@ -14,13 +14,15 @@ import io.jsonwebtoken.security.Keys;
 import io.jsonwebtoken.security.SignatureException;
 import jakarta.annotation.PostConstruct;
 import java.security.Key;
-import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 
 @Slf4j
@@ -124,6 +126,8 @@ public class TokenProvider {
 
         Member member = memberRepository.findByEmail(claims.getSubject()).orElseThrow();
 
-        return new UsernamePasswordAuthenticationToken(member, "", Collections.emptyList());
+        List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(member.getRole().toString()));
+
+        return new UsernamePasswordAuthenticationToken(member, "", authorities);
     }
 }
